convert materials - woods notes into webpage

--- a/notes/notes_topics/materialsnotes.html
+++ b/notes/notes_topics/materialsnotes.html
@@ -80,7 +80,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Woods</a>
+                            <a href="notes_pages\woods_materials_notes.html">Woods</a>
                         </div>
                     </div>
                 </div>
