--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -12,8 +12,8 @@
     Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
     solutions, coursework examples and much more!">
 
-    <link rel="shortcut icon" type="image/x-icon" href="../../Favicon.png">
-    <link rel="stylesheet" href="../../styles.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="../../../Favicon.png">
+    <link rel="stylesheet" href="../../../styles.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Google tag (gtag.js) -->
@@ -35,7 +35,7 @@
     <div class="containter">  
         <header>
             <div class="Logo">
-                <img class="logo" src="../../images/Logo.png"  alt="DesignandTechBase Logo">
+                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
             </div>
             <div class="toggle"></div>
             <div class="navigation">
@@ -47,32 +47,402 @@
                 </a>
 
                 <div class="nav-link-wrapper">
-                    <a href="../../index.html">Home</a>
+                    <a href="../../../index.html">Home</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../../tutoring.html">Tutoring</a>
+                    <a href="../../../tutoring.html">Tutoring</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../notes.html">Notes</a>
+                    <a href="../../notes.html">Notes</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../../exercises/exercises.html">Exercises</a>
+                    <a href="../../../exercises/exercises.html">Exercises</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../../coursework/coursework.html">Coursework</a>
+                    <a href="../../../coursework/coursework.html">Coursework</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../../contact.html">Contact</a>
+                    <a href="../../../contact.html">Contact</a>
                 </div>
                 
             </div>
         </header>
 
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(../../../images/matnote1.jpg)">
+                <!-- style="background-image:url(../../../images/matnote1.jpg)" -->
+                <h1><u><b>Woods</b></u></h1>
+            </div>
+
+            <div class="notes-content">
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Hard Woods<hr></h2>
+                </div>
+
+                <h3><b><u>Oak:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Strong</li>
+                                <li>Works Well</li>
+                                <li>Durable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Expensive</li>
+                                <li>Heavy</li>
+                                <li>Prone to Splitting</li>
+                                <li>Can be Physically Hard</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Garden furniture, construction, High quality furniture<br><br><br><br></h3>
+
+                <h3><u><b>Mahogany:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Easy to work</li>
+                                <li>Durable</li>
+                                <li>Finishes well</li>
+                                <li>Very few knots</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Grain can be variable</li>
+                                <li>Prone to warping</li>
+                                <li>Prone to Splitting</li>
+                                <li>Physical hardness varies</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Furniture, Veneers, Floorboards<br><br><br><br></h3>
+
+                <h3><u><b>Beech:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Physically hard</li>
+                                <li>Tough</li>
+                                <li>Polishes well</li>
+                                
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be prone to warping</li>
+                                <li>Not suitable for outside applications</li>
+                                <li>Can be difficult to work</li>
+                            </ul>                            
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Workshop benches, School desks, Furniture<br><br><br><br></h3>
+
+                <h3><u><b>Jelutong:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Straight grain</li>
+                                <li>Easy to work (low density)</li>
+                                <li>Little tendency to warp or split</li>
+                                <li>Durable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be easily stained</li>
+                                <li>Sap blunts tools</li>
+                                <li>Relatively expensive</li>
+                                <li>Suspect to biological corrosion</li>                                
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Carving, model making, patternmaking<br><br><br><br></h3>
+
+                <h3><u><b>Balsa:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lightweight</li>
+                                <li>Easy to work</li>
+                                <li>Grows very quick (sustainable)</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be expensive</li>
+                                <li>Not very durable</li>
+                                <li>Not waterproof</li>
+                            </ul>
+                        </td>                       
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>String instruments, model making<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Soft Woods<hr></h2>
+                </div>
+
+                <h3><u><b>Pine:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Easy to work</li>
+                                <li>Straight grain</li>
+                                <li>Affordable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Prone to knotting</li>
+                                <li>Not very durable</li>
+                                <li>Rots/corrodes easily</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Roof joists, Floorboards, Construction, Furniture<br><br><br><br></h3>
+
+                <h3><u><b>Cedar:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Doesn't warp easily</li>
+                                <li>Easy to work</li>
+                                <li>Naturally resistant to wear and decay</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Prone to knotting</li>
+                                <li>Susceptible to biological corrosion</li>
+                                <li>Highly flammable unless treated</li>
+                            </ul>
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Garden sheds, Decking, Floorboards<br><br><br><br></h3>
+
+                <h3><u><b>Larch:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Aesthetically pleasing</li>
+                                <li>Easy to work</li>
+                                <li>Good availability</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Natural resins can damage tools</li>
+                                <li>Prone to knotting/warping</li>
+                                <li>Difficult to treat</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Furniture, Cladding, Boatbuilding, Veneers<br><br><br><br></h3>
+
+                <h3><u><b>Redwood:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Aesthetically pleasing</li>
+                                <li>Very durable</li>
+                                <li>Doesn't warp</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Easily dented</li>
+                                <li>Expensive</li>
+                                <li>Can have irregular grain</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Furniture, Construction, Exterior furniture, Veneers<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Manufactured Boards<hr></h2>
+                </div>
+
+                <h3><u><b>Plywood:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Widely available</li>
+                                <li>Cheap</li>
+                                <li>Uniform strength</li>
+                                <li>Easy to work with</li>
+                                <li>Can be finished easily with varnishes etc</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Only comes in certain thicknesses</li>
+                                <li>Edges can splinter</li>
+                                <li>Doesn't do well with moisture</li>
+                                <li>Not as durable as natural timber</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Beams, Interior structures, shipping crates<br><br><br><br></h3>
+
+                <h3><u><b>Medium Density Fibreboard (MDF):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Widely available</li>
+                                <li>Cheap</li>
+                                <li>Doesn't warp due to lack of grain structure </li>
+                                <li>No knots</li>
+                                <li>Comes in any size/thickness</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Not as durable as natural timber</li>
+                                <li>Doesn't take nails/screws well</li>
+                                <li>Doesn't do well with moisture</li>
+                                <li>Poor surface finish without veneer</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Roofing, Tables, Cabinets<br><br><br><br></h3>
+
+                <h3><u><b>Particle board:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Cost-effective/cheap</li>
+                                <li>Lightweight</li>
+                                <li>Easy to laminate</li>
+                                <li>Made from recycled material</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Poor strength</li>
+                                <li>Prone to expansion in moisture</li>
+                                <li>Resin in particle board Is toxic</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Flat-pack furniture, Flooring, Wall panelling <br><br><br><br></h3>
+
+                <h3><u><b>Blockboard:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Good stability</li>
+                                <li>Inexpensive</li>
+                                <li>Can take varnish, paint, and laminate coat</li>
+                                <li>Good for screwing and nailing</li>
+                                <li>Doesn't twist/warp</li>
+                                <li>Lightweight</li>
+                                <li>Doesn't degrade tools quickly</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Weaker than natural timber</li>
+                                <li>Swelling can occur with moisture</li>
+                                <li>Prone to biological attack</li>
+                                <li>Short lifespan/poor durability</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Shelving, furniture, Wall panels<br><br><br><br></h3>
+
+                <div class="download-page">
+                    <h3>Get a copy of this page:
+                        <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Materials - Woods</a>
+                    </h3>
+                </div>
+            </div>
+        </div>
 
         <div class="footer">
             <div class="footer-content">
@@ -85,5 +455,5 @@
 
     </div>
 </body>
-<script src="../../script.js"></script>
+<script src="../../../script.js"></script>
 </html>
