--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -74,8 +74,7 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/matnote1.jpg)">
-                <!-- style="background-image:url(../../../images/matnote1.jpg)" -->
+            <div class="notes-content-header" >
                 <h1><u><b>Woods</b></u></h1>
             </div>
 
