--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -81,7 +81,7 @@
             <div class="notes-content">
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Hard Woods<hr></h2>
+                    <h2><hr>Hardwoods<hr></h2>
                 </div>
 
                 <h3><b><u>Oak:</b></u></h3>
@@ -216,7 +216,7 @@
                 <h3><b>Uses: </b>String instruments, model making<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Soft Woods<hr></h2>
+                    <h2><hr>Softwoods<hr></h2>
                 </div>
 
                 <h3><u><b>Pine:</b></u></h3>
