--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -80,6 +80,15 @@
 
             <div class="notes-content">
 
+                <div class="notes-content-intro">
+                    <h2>The following page of notes will cover:</h2>
+                    <ul style="font-size: medium;">
+                        <li>Hardwoods</li>
+                        <li>Softwoods</li>
+                        <li>Manufactured Boards</li>
+                    </ul>
+                </div>
+
                 <div class="notes-content-subheader">
                     <h2><hr>Hardwoods<hr></h2>
                 </div>
