--- a/notes/notes_topics/notes_pages/metals_materials_notes.html
+++ b/notes/notes_topics/notes_pages/metals_materials_notes.html
@@ -79,8 +79,313 @@
             </div>
 
             <div class="notes-content">
+                <div class="notes-content-intro">
+                    <h2>The following page of notes will cover:</h2>
+                    <ul style="font-size: medium;">
+                        <li>Ferrous Metals</li>
+                        <li>Non-ferrous Metals</li>
+                        <li>Alloys</li>
+                    </ul>
+                </div>
 
-                
+                <div class="notes-content-subheader">
+                    <h2><hr>Ferrous Metals<hr></h2>
+                </div>
+
+                <h3><b><u>Mild Steel:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Versatile material</li>
+                                <li>Easily worked</li>
+                                <li>Malleable</li>
+                                <li>Ductile</li>
+                                <li>Good tensile strength</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Mild steel contains iron and so it rusts easily</li>
+                                <li>Limited ways to be treated (only case hardening)</li>
+                                <li>Poor strength to weight ratio</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>General engineering, Construction, Nuts and Bolts, Pipelines, Machinery parts<br><br><br><br></h3>
+
+                <h3><u><b>Medium Carbon Steel:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Harder than mild steel</li>
+                                <li>Ductile</li>
+                                <li>Strong material</li>
+                                <li>Wear resistant</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Due to increased carbon content it is less ductile/malleable than mild steel</li>
+                                <li>Hard to shape/cut</li>                            
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Garden tools, Springs, Gears, Railroad<br><br><br><br></h3>
+
+                <h3><u><b>High carbon steel:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Extremely hard/strong</li>
+                                <li>Cheap in comparison to other hard materials</li>                            
+                                
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Brittle due to high carbon content</li>
+                                <li>Expensive</li>
+                                <li>Difficult to form/cut/weld</li>
+                            </ul>                            
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Drills, Expensive, Knives<br><br><br><br></h3>
+
+                <h3><u><b>Cast Iron:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Good casting properties</li>
+                                <li>High machinability</li>
+                                <li>Good wear resistance</li>
+                                <li>Corrosion resistant</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Very heavy</li>
+                                <li>Brittle</li>
+                                <li>Low tensile strength</li>                                                                
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Machinery, Cooking pots, Disk brakes, Pipes<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Non-ferroues Metals<hr></h2>
+                </div>
+
+                <h3><u><b>Aluminium:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lightweight</li>
+                                <li>Corrosion resistant</li>
+                                <li>Good conductor of electricity</li>
+                                <li>Malleable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Cracks under stress</li>
+                                <li>Needs annealing when worked</li>
+                                <li>Does not withstand great loads</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Aircraft, Engine parts, Utensils, Tins<br><br><br><br></h3>
+
+                <h3><u><b>Copper:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Good heat and electrical conductor</li>
+                                <li>Ductile</li>
+                                <li>Malleable</li>
+                                <li>Soft</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Needs annealing when worked</li>
+                                <li>Danger of electrolysis when in contact with water</li>
+                                <li>Corrodes easily</li>
+                                <li>Expensive</li>
+                            </ul>
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Electrical cables, Circuits, Generators, Heating<br><br><br><br></h3>
+
+                <h3><u><b>Zinc:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Corrosion resistant</li>
+                                <li>Self-healing</li>
+                                <li>Recyclable</li>
+                                <li>Durable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Low toughness</li>
+                                <li>Brittle when worked</li>
+                                <li>May corrode when in contact with water/moisture for a long time</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Roofing, Castings, Batteries<br><br><br><br></h3>
+
+                <h3><u><b>Tin:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Malleable</li>
+                                <li>Ductile</li>
+                                <li>Corrosion resistant</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Hard to recycle</li>
+                                <li>Not very strong</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Furniture, Construction, Exterior furniture, Veneers<br><br><br><br></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Alloys<hr></h2>
+                </div>
+                <div>
+                    <p>Alloys are made by combining two or more metallic elements, to give improved properties such as greater strength or resistance to corrosion.</p>
+                </div>
+
+                <h3><u><b>Stainless Steel (Chromium, Nickel, Steel):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Corrosion resistant</li>
+                                <li>Heat resistant</li>
+                                <li>Can be recycled</li>
+                                <li>Good strength to weight ratio</li>
+                                <li>Hygenic/non-toxic</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Expensive</li>
+                                <li>Hard to machine</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Kitchen utensils, Medical tools, Construction<br><br><br><br></h3>
+
+                <h3><u><b>Duralumin (Aluminium, Copper, Manganese):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lightweight</li>
+                                <li>Strong</li>
+                                <li>Casts well</li>
+                                <li>Tough/hard</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Not corrosion resistant</li>
+                                <li>Brittle</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Aviation industry, Automobile industry, Pipelines<br><br><br><br></h3>
+
+                <h3><u><b>Brass (Copper, Zinc):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Casts well</li>
+                                <li>Easy to machine</li>
+                                <li>Good conductor of heat and electricity</li>
+                                <li>Low friction coefficent</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Susceptible to cracking when cold worked</li>
+                                <li>Needs to be constantly annealed</li>
+                                <li>Not very corrosion resistant</li>
+                            </ul>                            
+                        </td>                        
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Ship propellers, Electrical components, Locks, Gears<br><br><br><br></h3>
+
                 <div class="download-page">
                     <h3>Get a copy of this page:
                         <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Materials - Woods</a>
