added links to new created materials pages

--- a/notes/notes_topics/materialsnotes.html
+++ b/notes/notes_topics/materialsnotes.html
@@ -89,7 +89,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_Metals.pdf">Metals</a>
+                            <a href="notes_pages\metals_materials_notes.html">Metals</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_Polymers.pdf">Polymers</a>
+                            <a href="notes_pages\polymers_materials_notes.html">Polymers</a>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnoteComposite.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
+                            <a href="notes_pages\composites_materials_notes.html">Composites</a>
                         </div>
                     </div>
                 </div>
