Will can't spell

--- a/notes/notes_topics/notes_pages/metals_materials_notes.html
+++ b/notes/notes_topics/notes_pages/metals_materials_notes.html
@@ -196,7 +196,7 @@
                 <h3><b>Uses: </b>Machinery, Cooking pots, Disk brakes, Pipes<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Non-ferroues Metals<hr></h2>
+                    <h2><hr>Non-ferrous Metals<hr></h2>
                 </div>
 
                 <h3><u><b>Aluminium:</b></u></h3>
