setup link to maths notes page

--- a/notes/notes_topics/MathematicsForD&T.html
+++ b/notes/notes_topics/MathematicsForD&T.html
@@ -73,25 +73,22 @@
         <div class="quote">
             <h2>Mathematics</h2>
         </div>
-        <!-- <div class="content-wrapper">
+        <div class="content-wrapper">
              <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\13. Mathematics for D&T\DTBase_MathematicsForDT_Maths.pdf">Mathematics for Design & Technology</a>
+                            <a href="notes_pages\maths_notes.html">Mathematics for Design & Technology</a>
                         </div>
                     </div>
                 </div>
-
             </div>
-
-
-        </div> -->
-        <div class="comingsoon">
-            DT maths notes coming soon!
         </div>
+        <!-- <div class="comingsoon">
+            DT maths notes coming soon!
+        </div> -->
 
         <div class="footer">
             <div class="footer-content">
