--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -244,7 +244,20 @@
                     
                 </div>
                 <h3><b>Question 2)</b></h3>
-                <p>A student is cutting out a piece of wood for his design project. To do this his needs to use the bandsaw. The probability that the bandsaw is free is 0.65. The probability that the PPE he needs for bandsaw is free is 0.35. Calculate the probability that he can undertake his work.</p>
+                <p>The manufacturer of engine has three quality control checks to perform. Given that 50,000 parts are made in a day. How many parts fail in a working week. A part fails the quality control cehck if all 3 tests fail together. </p>
+                <ul>
+                    <li>Probability of test A failing = 0.01</li>
+                    <li>Probability of test A failing = 0.03</li>
+                    <li>Probability of test A failing = 0.05</li>
+                </ul>
+                <div class="worked-example">
+                    <p><b>Step 1) Calculate the probability of a part failing all 3 tests:</b></p>
+                    <p>Probability of all 3 failing = 0.01 x 0.03 x 0.05 = 0.000015</p>
+                    <p><b>Step 2) Calculate the number of parts that fail in a day</b></p>
+                    <p>Daily failures = 50,000 x 0.000015 = 0.0.75</p>
+                    <p><b>Step 3) Calculate the number of parts that fail in a working week:</b></p>
+                    <p>Failures in a week = 0.75 x 5 = 3.75 parts</p>
+                </div>
         
                 <div class="worked-example">
                     <p><b>Step 1) Calculate the probability:</b></p>
