added background to page title

--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -74,8 +74,8 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" >
-                <h1><u><b>Mathematics</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/mathsforDT.jpg)" title="maths background">
+                <h1 style="color:white"><u><b>Mathematics</b></u></h1>
             </div>
 
             <div class="notes-content">
@@ -252,12 +252,12 @@
                     
                 </div>
                 
-
+<!-- 
                 <div class="download-page">
                     <br><h3>Get a copy of this page:
                         <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Mathematics</a>
                     </h3>
-                </div>
+                </div> -->
             </div>
         </div>
 
