comment out download page

--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -261,11 +261,11 @@
         
                                
 
-                <div class="download-page">
+                <!-- <div class="download-page">
                     <br><h3>Get a copy of this page:
                         <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Mathematics</a>
                     </h3>
-                </div> -->
+                </div>  -->
             </div>
         </div>
 
