--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -220,6 +220,13 @@
                     <p>Column length = &#8730 11,252,201 = 3354.4mm</p>
                 </div>
 
+                <h3><b>Question 2)</b></h3>
+                <p>From the footbridge question above. Calculate the angle the column makes with the ground.</p>
+                <p><b>Step 1) Identify what trigonometric identity we need to use:</b></p>
+                    <p>As we have the length opposite, and length adjacent to the angle we are interested in, we will use TAN.</p>
+                    <p><b>Step 2) Find tan(x) where x is the angle</b></p>
+                    <p>tan(x) = Opposite/Adjacent = 2675/2024 = 1.3216...</p>
+
                 <div class="notes-content-subheader">
                     <h2><hr>Graphs and Charts<hr></h2>
                 </div>
