--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -222,10 +222,12 @@
 
                 <h3><b>Question 2)</b></h3>
                 <p>From the footbridge question above. Calculate the angle the column makes with the ground.</p>
-                <p><b>Step 1) Identify what trigonometric identity we need to use:</b></p>
+                    <p><b>Step 1) Identify what trigonometric identity we need to use:</b></p>
                     <p>As we have the length opposite, and length adjacent to the angle we are interested in, we will use TAN.</p>
                     <p><b>Step 2) Find tan(x) where x is the angle</b></p>
-                    <p>tan(x) = Opposite/Adjacent = 2675/2024 = 1.3216...</p>
+                    <p>tan(x) = <sup>Opposite</sup>&frasl;<sub>Adjacent</sub> = 2675&frasl;2024 = 1.3216...</p>
+                    <p><b>Step 3) Find the angle, x</b></p>
+                    <p>Angle, x, = tan<sup>-1</sup>(1.3216...) = 52.9<sup>o</sup></p>
 
                 <div class="notes-content-subheader">
                     <h2><hr>Graphs and Charts<hr></h2>
@@ -254,8 +256,8 @@
                 <p>The manufacturer of engine has three quality control checks to perform. Given that 50,000 parts are made in a day. How many parts fail in a working week. A part fails the quality control cehck if all 3 tests fail together. </p>
                 <ul>
                     <li>Probability of test A failing = 0.01</li>
-                    <li>Probability of test A failing = 0.03</li>
-                    <li>Probability of test A failing = 0.05</li>
+                    <li>Probability of test B failing = 0.03</li>
+                    <li>Probability of test C failing = 0.05</li>
                 </ul>
                 <div class="worked-example">
                     <p><b>Step 1) Calculate the probability of a part failing all 3 tests:</b></p>
