--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -152,6 +152,20 @@
                     <p>As demand is greater than supply the manufacturer cannot meed the demand of the construction company</p>
                 </div>
 
+                <h3><b>Question 2)</b></h3>
+                <p>The new high speed railway will decrease the time taken to travel between London and York by 15 minutes. The journey takes 2.05 hours currently. Calculate the percentage reduction in travel time.</p>
+                                
+                <div class="worked-example">
+                    <p><b>Step 1) Calculate the current journey time in minutes:</b></p>
+                    <em>Time (minutes) = 2.05 x 60 = 123 minutes</em>
+                    
+                    <p><b>Step 2) Calculate the new journey time:</b></p>
+                    <em>New time = 123 - 15 = 108 minutes</em>
+
+                    <p><b>Step 3) Calculate the percentage reduction in journey time:</b></p>
+                    <p>Percentage reduction = <sup>Old - New</sup>&frasl;<Sub>Old</Sub> = <sup>15</sup>&frasl;<Sub>123</Sub> = 0.122 = 12.2% </p>
+                </div>
+
                 <div class="notes-content-subheader">
                     <h2><hr>Ratio<hr></h2>
                 </div>
