--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -83,7 +83,7 @@
                 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Mathematics Worked Examples By topics<hr></h2>
+                    <h2><hr>Mathematics Worked Examples by Topics<hr></h2>
                 </div>
 
                 <table>
@@ -229,9 +229,9 @@
                     <p><b>Step 1) Identify what equation we need to use:</b></p>
                     <p>Although hard to see the two lengths and the column make a right angled triangle and so we can use Pythagorus</p>
                     <p><b>Step 2) Use pythagorus to work out the column length squared</b></p>
-                    <p>Column length<sup>2</sup> = 2675<sup>2</sup> + 2024<sup>2</sup> = 11,252,201mm </p>
+                    <em>Column length<sup>2</sup> = 2675<sup>2</sup> + 2024<sup>2</sup> = 11,252,201mm</em>
                     <p><b>Step 3) Calculate column length:</b></p>
-                    <p>Column length = &#8730 11,252,201 = 3354.4mm</p>
+                    <em>Column length = &#8730 11,252,201 = 3354.4mm</em>
                 </div>
 
                 <h3><b>Question 2)</b></h3>
