--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -237,11 +237,11 @@
                 <h3><b>Question 2)</b></h3>
                 <p>From the footbridge question above. Calculate the angle the column makes with the ground.</p>
                     <p><b>Step 1) Identify what trigonometric identity we need to use:</b></p>
-                    <p>As we have the length opposite, and length adjacent to the angle we are interested in, we will use TAN.</p>
+                    <em>As we have the length opposite, and length adjacent to the angle we are interested in, we will use TAN.</em>
                     <p><b>Step 2) Find tan(x) where x is the angle</b></p>
-                    <p>tan(x) = <sup>Opposite</sup>&frasl;<sub>Adjacent</sub> = 2675&frasl;2024 = 1.3216...</p>
+                    <em>tan(x) = <sup>Opposite</sup>&frasl;<sub>Adjacent</sub> = <sup>2675</sup>&frasl;<sub>2024</sub> = 1.3216...</em>
                     <p><b>Step 3) Find the angle, x</b></p>
-                    <p>Angle, x, = tan<sup>-1</sup>(1.3216...) = 52.9<sup>o</sup></p>
+                    <em>Angle, x, = tan<sup>-1</sup>(1.3216...) = 52.9<sup>o</sup></em>
 
                 <div class="notes-content-subheader">
                     <h2><hr>Graphs and Charts<hr></h2>
