--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -297,7 +297,7 @@
                     <p><b>Step 1) Calculate the number of students needed until 3 fail:</b></p>
                     <p> 3 Fails = x (number of students in class) x 0.05</p>
                     <p><b>Step 2) Solve for x (number of students in class):</b></p>
-                    <p> x = <sup>3</sup>&frasl;<sub>0.5</sub> = 60 </p>
+                    <p> x = <sup>3</sup>&frasl;<sub>0.5</sub> = 60 students</p>
 
                 </div>
 
