--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -142,9 +142,9 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Garden tools, Springs, Gears, Railroad<br><br><br><br></h3>
+                <h3><b>Uses: </b>Buckets, bowls, Cable insulation, bottles<br><br><br><br></h3>
 
-                <h3><u><b>High carbon steel:</b></u></h3>
+                <h3><u><b>Polyethylene terephthalate (PET):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -153,23 +153,25 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Extremely hard/strong</li>
-                                <li>Cheap in comparison to other hard materials</li>                            
+                                <li>Good alcohol and oil barrier</li>
+                                <li>Weather resistant</li>
+                                <li>Stiff/tough/hard</li> 
+                                <li>Available in a range of colours</li>                             
                                 
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Brittle due to high carbon content</li>
-                                <li>Expensive</li>
-                                <li>Difficult to form/cut/weld</li>
+                                <li>Can discolour from UV light</li>
+                                <li>Needs to be treated when used for food containers</li>
+                                <li>Susceptible to heat degradation</li>
                             </ul>                            
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Drills, Expensive, Knives<br><br><br><br></h3>
+                <h3><b>Uses: </b>Fizzy drinks bottles, washing up bottles, fibres for clothing<br><br><br><br></h3>
 
-                <h3><u><b>Cast Iron:</b></u></h3>
+                <h3><u><b>Polyvinyl Chloride (PVC):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -178,25 +180,79 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Good casting properties</li>
-                                <li>High machinability</li>
-                                <li>Good wear resistance</li>
-                                <li>Corrosion resistant</li>
+                                <li>Good chemical resistance</li>
+                                <li>Weather resistant</li>
+                                <li>Stiff/tough/hard</li>
+                                <li>Available in a range of colours</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Very heavy</li>
+                                <li>Can discolour from UV light</li>
                                 <li>Brittle</li>
-                                <li>Low tensile strength</li>                                                                
+                                <li>Easily scratched</li>
+                                <li>Difficult to recycle</li>                                                                
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Machinery, Cooking pots, Disk brakes, Pipes<br><br><br><br></h3>
+                <h3><b>Uses: </b>Pipes, guttering, electrical insulation, floor coverings<br><br><br><br></h3>
+
+                <h3><u><b>Polypropylene (PP):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Lightweight</li>
+                                <li>Hard</li>
+                                <li>Impact resistant</li>
+                                <li>Chemical resistant</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can discolour from UV light</li>
+                                <li>Oxidation can cause problems</li>
+                                <li>Not heat resistant</li>
+                                <li>Difficult to paint</li>                                                                
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Medical syringes, carpets, kitchenware<br><br><br><br></h3>
+
+                <h3><u><b>Acrylonitrile Butadiene Styrene (ABS):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Good chemical resistance</li>
+                                <li>Hard</li>
+                                <li>Tough/durable</li>
+                                <li>Heat resistant</li>
+                                <li>Naturally good finish</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can discolour from UV light</li>
+                                <li>Poor solvent resistance</li>                                                              
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Mobile phones, safety helmets, pipes<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Non-ferroues Metals<hr></h2>
+                    <h2><hr>Thermosetting plastics<hr></h2>
                 </div>
 
                 <h3><u><b>Aluminium:</b></u></h3>
